--- a/style.css
+++ b/style.css
@@ -243,3 +243,10 @@ ul li.playing{
   pointer-events: none;
   color: var(--violet);
 }
+footer {
+  text-align: center;
+  padding: 3px;
+  background-color: white;
+  color: black;
+  border-radius: 5px;
+}
